[package]
name = "github-recon"
version = "0.1.0"
edition = "2021"
authors = ["github-recon"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"

[lib]
name = "github_recon"
path = "src/lib.rs"

[[bin]]
name = "github-recon"
path = "src/main.rs"

[[bin]]
name = "github-recon-mcp"
path = "src/mcp.rs"
